# dccbot

./: .gitignore  Makefile  README.md  bot.py  config.json.sample  docker-compose.yml  jest.config.js  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml
dccbot/: aiodcc.py  app.py  command_pipeline.py  dcc_parsing.py  ircbot.py  manager.py  transfer_handler.py  transfers.py
static/: index.html  info.html  log.html  ws.js
tests/: conftest.py  test_aiodcc.py  test_api_endpoints.py  test_app1.py  test_dcc_parsing.py  test_ircbot.py  test_manager.py  test_transfer_handler.py  test_websocket.py
tests/integration/: README.md  __init__.py  conftest.py  iroffer.Dockerfile  test_irc_connection.py  test_xdcc_download.py
tests/integration/inspircd_config/: inspircd_entrypoint.sh
tests/integration/iroffer_config/: mybot.config
tests/js/: ws.test.js
tests/unit/: __init__.py  test_aiodcc.py  test_ircbot.py  test_transfers.py  test_web_interface.py
userscript/: add-dccbot-btn.js
