[project]
name = "dccbot"
version = "0.1.0"
description = "An IRC XDCC download bot written in python with aiohttp and ircpy"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.12",
    "irc>=20.5.0",
    "pytest-aiohttp>=1.1.0",
    "python-magic>=0.4.27",
    "apispec>=3.3.2",
    "marshmallow>=3.26.1",
    "aiohttp-apispec-acapy>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest-aiohttp>=1.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "tox>=4.24.1",
    "pytest-asyncio>=0.25.3",
    "radon>=6.0.1",
    "xenon>=0.9.3",
    "vulture>=2.14",
    "pyright>=1.1.399",
]

[tool.ruff]
exclude = ["docs", "tests"]
line-length = 160
indent-width = 4  # Same as autopep8 default

[tool.ruff.format]
quote-style = "double"  # Or "single" if you prefer
indent-style = "space"  # Use spaces instead of tabs
line-ending = "lf"  # Keep consistency
preview = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = [
    "ANN",
    "UP",
    "UP042",
    "I"
]
select = ["E9", "F82", "D"]  # Syntax errors + docstrings
ignore = ["D203", "D213", "D100", "F821"]  # Ignore specific docstring rules

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
exclude = ["**/__pycache__", "**/node_modules", "**/dist", "**/build", "**/venv", "**/.venv"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.vulture]
exclude = ["dist", "build", "venv", ".venv", "tests" ]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
# make_whitelist = true
min_confidence = 80
paths = ["."]
sort_by_size = true
